compiler/src/test/resources/amyc/execution/passing/Match2.grading.amy
object MatchError
  abstract class Foo
  case class Bar(i: Int, b: Boolean, u: Unit) extends Foo

  Bar(10, true, ()) match { case Bar(10, true, ()) => () }
end MatchError
