compiler/src/test/resources/amyc/execution/failing/MatchError4.grading.amy
object MatchError
  abstract class Foo
  case class Bar(s: String) : Foo

  Bar("foo") match { case Bar("foo") => () }
end MatchError
